--- a/index.html
+++ b/index.html
@@ -189,6 +189,15 @@
                         <i class="fa-regular fa-circle-xmark"></i>
                     </label>
                     <ul class="menu-mobie-list">
+                        <li class="search-mobile">
+                            <div class="container-search-mobile">
+                                <input type="text" class="input-search-mobile">
+                                 <button type="button" class="btn-search-mobile">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </button> 
+                            </div>
+                               
+                        </li>
                         <li><a href="">home</a> </li>
                         <li><a href="">woman</a> </li>
                         <li><a href="">men</a> </li>
@@ -196,7 +205,6 @@
                         <li><a href="">blog</a> </li>
                         <li><a href="">collections</a> </li>
                         <li><a href="">contact</a> </li>
-                        <li><a href="">Search</a></li>
                     </ul>
                 </div>
             </div>
@@ -650,18 +658,24 @@
                 <div class="address">
                     <h3>Shop Location</h3>
                     <div class="map">
-                        <a href=""><i class="fa-regular fa-map"></i></a>
-                        <p> 500 Hennessy Road<br>
-                            Causeway Bay, Hong Kong
-                        </p>
+                        <a href="">
+                            <i class="fa-regular fa-map"></i>
+                            <p> 500 Hennessy Road<br>
+                                Causeway Bay, Hong Kong
+                            </p>
+                        </a>
                     </div>
                     <div class="phone">
-                        <a href=""><i class="fa-solid fa-phone"></i></a>
-                        <p>+1 23456789</p>
+                        <a href="">
+                            <i class="fa-solid fa-phone"></i>
+                            <p>+1 23456789</p>
+                        </a>
                     </div>
                     <div class="mail">
-                        <a href=""><i class="fa-regular fa-envelope"></i></a>
-                        <p>contact@yourdomain.com</p>
+                        <a href="">
+                            <i class="fa-regular fa-envelope"></i>
+                            <p>contact@yourdomain.com</p>
+                        </a>
                     </div>
                 </div>
                 
