--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
                                         <i class="cart-product-delete fas fa-trash-alt"></i>
                                     </button>
                                 </li>
-
                                 <li class="shopping-item">
                                     <div class="shopping-item-content">
                                         <div class="item-content-img">
-                                            <img src="./asset/image/product02.jpg" alt="">
+                                            <img src="./asset/image/product01.jpg" alt="">
                                         </div>
                                         <div class="item-content-product">
                                             <a href="" class="name-product">Suspendise id volutpat</a>
@@ -137,19 +136,18 @@
                                                     <button class="btn-quantity-add" name="button" type="button">
                                                         <i class="fas fa-plus"></i>
                                                     </button>
-                                                    <h4 class="information-product-price">$84.000</h4>
+                                                </div>
+                                                <h4 class="information-product-price">$84.000</h4>
                                             </div>
                                         </div>
-                                    </div>
                                     <button type="button" class="shopping-item-delete">
                                         <i class="cart-product-delete fas fa-trash-alt"></i>
                                     </button>
                                 </li>
-
                                 <li class="shopping-item">
                                     <div class="shopping-item-content">
                                         <div class="item-content-img">
-                                            <img src="./asset/image/product03.jpg" alt="">
+                                            <img src="./asset/image/product01.jpg" alt="">
                                         </div>
                                         <div class="item-content-product">
                                             <a href="" class="name-product">Suspendise id volutpat</a>
@@ -162,10 +160,10 @@
                                                     <button class="btn-quantity-add" name="button" type="button">
                                                         <i class="fas fa-plus"></i>
                                                     </button>
-                                                    <h4 class="information-product-price">$84.000</h4>
+                                                </div>
+                                                <h4 class="information-product-price">$84.000</h4>
                                             </div>
                                         </div>
-                                    </div>
                                     <button type="button" class="shopping-item-delete">
                                         <i class="cart-product-delete fas fa-trash-alt"></i>
                                     </button>
@@ -666,13 +664,13 @@
                         </a>
                     </div>
                     <div class="phone">
-                        <a href="">
+                        <a href="tel:+1 23456789">
                             <i class="fa-solid fa-phone"></i>
                             <p>+1 23456789</p>
                         </a>
                     </div>
                     <div class="mail">
-                        <a href="">
+                        <a href="mailto:contact@yourdomain.com">
                             <i class="fa-regular fa-envelope"></i>
                             <p>contact@yourdomain.com</p>
                         </a>
@@ -691,11 +689,11 @@
                     </div>
 
                     <div class="payment">
-                        <a href=""><i class="fa-brands fa-cc-visa"></i></a>
-                        <a href=""><i class="fa-brands fa-cc-paypal"></i></a>
-                        <a href=""><i class="fa-brands fa-cc-mastercard"></i></a>
-                        <a href=""><i class="fa-brands fa-cc-discover"></i></a>
-                        <a href=""><i class="fa-brands fa-cc-amex"></i></a> 
+                        <i class="fa-brands fa-cc-visa"></i>
+                        <i class="fa-brands fa-cc-paypal"></i>
+                        <i class="fa-brands fa-cc-mastercard"></i>
+                        <i class="fa-brands fa-cc-discover"></i>
+                        <i class="fa-brands fa-cc-amex"></i> 
                     </div>
                 </div>
                 
