--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@
         <div class="banner container">
             <div class="banner-block1">
                 <div class="banner1">
-                    <img src="./asset/image/bannner01.jpg" alt="banner1">
+                    <img src="./asset/image/bannner01.png" alt="banner1">
+                    <h2>blyszak</h2>
+                    <h3>eyewear</h3>
                     <h4>Two High-end Materials</h4>
                     <a href="#">Shop Now</a>
                 </div>
